# agent-memfas

./: .gitignore  CHANGELOG.md  CURRENT_WORK.md  LICENSE  PLAYBOOK.md  README.md  ROADMAP.md  pyproject.toml
docs/: context-management-plan.md  v2-search-interface.md  v3-context-engineering.md
examples/clawdbot/: README.md  memfas.yaml.example
examples/standalone/: example.py
src/agent_memfas/: __init__.py  __main__.py  cli.py  config.py  memory.py
src/agent_memfas/context/: README.md  __init__.py  cold_storage.py  config.py  context_manager.py  logger.py  memfas_integration.py  minimax_summarizer.py  relevance.py  summarizer.py  summarizer_base.py
src/agent_memfas/embedders/: __init__.py  base.py  fastembed.py  ollama.py
src/agent_memfas/search/: __init__.py  base.py  embedding.py  fts5.py  journal.py  ollama_vec.py  preindexed_vec.py
src/agent_memfas/v3/: __init__.py  budget.py  curator.py  levels.py  scorer.py  session.py  telemetry.py  topic.py  types.py
tests/: test_integration.py  test_memory.py  test_search_backends.py
